--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,115 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:contentDescription="status_padding"
-    tools:context=".ui.login.LoginActivity">
+    android:contentDescription="status_padding">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"/>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/loginRootRl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.login.LoginActivity">
 
-    <RelativeLayout
-        android:id="@+id/loginContainer"
-        android:layout_width="326dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintHorizontal_bias="0.465"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="54dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher"/>
+
+        <RelativeLayout
+            android:id="@+id/loginContainer"
+            android:layout_width="326dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="44dp"
+            app:layout_constraintHorizontal_bias="0.465"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/mobileEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparent"
+                    android:drawableRight="@mipmap/ic_phone"
+                    android:drawableTint="@color/gray"
+                    android:hint="请输入电话号码"
+                    android:inputType="phone"
+                    android:maxLength="11"
+                    android:textColorHint="@color/gray"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/sendVerifyTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:padding="5dp"
+                android:text="发送验证码"
+                android:textColor="@color/blue"
+                android:textSize="17sp"
+                android:visibility="visible"/>
+        </RelativeLayout>
+
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/verifyContainer"
+            android:layout_width="326dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginContainer">
 
             <EditText
-                android:id="@+id/mobileEt"
+                android:id="@+id/verifyCodeEt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/transparent"
-                android:drawableRight="@mipmap/ic_phone"
+                android:drawableRight="@mipmap/ic_verify"
                 android:drawableTint="@color/gray"
-                android:hint="请输入电话号码"
-                android:inputType="phone"
-                android:maxLength="11"
+                android:hint="请输入验证码"
+                android:inputType="number"
+                android:maxLength="6"
                 android:textColorHint="@color/gray"/>
         </android.support.design.widget.TextInputLayout>
 
+
+        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
+            android:id="@+id/loginBtn"
+            android:layout_width="326dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/btn_login_bg"
+            android:text="登录"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/verifyContainer"
+            app:spinning_bar_color="#fff"
+            app:spinning_bar_padding="6dp"
+            app:spinning_bar_width="4dp"/>
+
         <TextView
-            android:id="@+id/sendVerifyTv"
+            android:id="@+id/needHelpTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:padding="5dp"
-            android:text="发送验证码"
-            android:textColor="@color/blue"
-            android:textSize="17sp"
-            android:visibility="visible"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/login_need_help"
+            android:textColor="@color/blue_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
+            app:layout_constraintVertical_bias="1.0"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <RelativeLayout
+        android:id="@+id/transitionRoot"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/companyNameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text=""
+            android:textColor="#000"
+            android:textSize="25sp"/>
     </RelativeLayout>
+</FrameLayout>
 
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/verifyContainer"
-        android:layout_width="326dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginContainer">
-
-        <EditText
-            android:id="@+id/verifyCodeEt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/transparent"
-            android:drawableRight="@mipmap/ic_verify"
-            android:drawableTint="@color/gray"
-            android:hint="请输入验证码"
-            android:inputType="number"
-            android:maxLength="6"
-            android:textColorHint="@color/gray"/>
-    </android.support.design.widget.TextInputLayout>
-
-
-    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
-        android:id="@+id/loginBtn"
-        android:layout_width="326dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/btn_login_bg"
-        android:text="登陆"
-        android:textColor="@color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verifyContainer"
-        app:spinning_bar_color="#fff"
-        app:spinning_bar_padding="6dp"
-        app:spinning_bar_width="4dp"/>
-
-    <TextView
-        android:id="@+id/needHelpTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/login_need_help"
-        android:textColor="@color/blue_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
-        app:layout_constraintVertical_bias="1.0"/>
-
-</android.support.constraint.ConstraintLayout>
