--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:contentDescription="status_padding"
     tools:context="com.wxeapapp.ui.select.SwitchSystemActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/white"
-        android:contentDescription="status_padding">
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/titleTv"
