--- a/app/src/main/res/layout/item_selection_orgnization.xml
+++ b/app/src/main/res/layout/item_selection_orgnization.xml
@@ -10,7 +10,9 @@
     android:layout_marginTop="10dp"
     android:background="@color/white"
     android:elevation="3dp"
-    app:cardCornerRadius="3dp">
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
