--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,8 @@
             android:layout_width="326dp"
             android:layout_height="50dp"
             android:layout_marginTop="44dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
