解决了虚拟底部导航栏挡住布局的问题并且适配了webview显示不全

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -7,8 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffff"
-    android:contentDescription="status_padding"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.wxeapapp.ui.web.WebActivity">
 
     <LinearLayout
