--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:contentDescription="status_padding"
+    android:fitsSystemWindows="true"
     tools:context="com.wxeapapp.ui.select.SwitchSystemActivity">
 
     <RelativeLayout
