--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         tools:context=".ui.login.LoginActivity">
 
         <ImageView
-            android:background="@mipmap/ic_launcher"
+            android:background="@drawable/ic_launcher"
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
