--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,56 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/webContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffff"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="com.wxeapapp.ui.web.WebActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:minHeight="?android:attr/actionBarSize">
+        app:elevation="0dp">
 
-        <ImageView
-            android:id="@+id/webBackIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/ic_arrow_back_dark_24dp"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
 
-        <TextView
-            android:id="@+id/titleTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:text="正在加载..."
-            android:textColor="#000"
-            android:textSize="20sp"/>
-
-        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/moreIv"
-                android:layout_marginRight="15dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:background="@mipmap/ic_more"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-        </RelativeLayout>
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white" />
+    </android.support.design.widget.AppBarLayout>
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/white"-->
+    <!--android:minHeight="?android:attr/actionBarSize">-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/webBackIv"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_gravity="center_vertical"-->
+    <!--android:layout_marginLeft="15dp"-->
+    <!--android:background="@drawable/ic_arrow_back_dark_24dp"/>-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/titleTv"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center_vertical"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:text="正在加载..."-->
+    <!--android:textColor="#000"-->
+    <!--android:textSize="20sp"/>-->
+
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+    <!--<ImageView-->
+    <!--android:id="@+id/moreIv"-->
+    <!--android:layout_marginRight="15dp"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:background="@mipmap/ic_more"-->
+    <!--android:layout_width="30dp"-->
+    <!--android:layout_height="30dp"/>-->
+    <!--</RelativeLayout>-->
 
 
-
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 </LinearLayout>
